<resources>
    <string name="app_name">Filament Meter</string>
    <string name="remaining_filament_label">Remaining filament (meter)</string>
    <string name="core_diameter_label">Hollow core diameter (mm)</string>
    <string name="core_diameter_hint">Enter hollow core diameter (mm)</string>
    <string name="full_radius_label">Full winding thickness (mm)</string>
    <string name="full_radius_hint">Enter full winding thickness (mm)</string>
    <string name="empty_radius_label">Empty space thickness (mm)</string>
    <string name="empty_radius_hint">Enter empty space thickness (mm)</string>
    <string name="slot_width_label">Wall-to-wall width (mm)</string>
    <string name="slot_width_hint">Enter wall-to-wall width (mm)</string>
    <string name="filament_diameter_label">Filament diameter (mm)</string>
    <string name="filament_diameter_hint">Enter filament diameter (mm)</string>
    <string name="button_minus_ten">-10</string>
    <string name="button_minus_one">-1</string>
    <string name="button_plus_one">+1</string>
    <string name="button_plus_ten">+10</string>
    <string name="illustration_of_parameters">Illustration of parameters</string>
    <string name="spool1_button">Spool #1</string>
    <string name="spool2_button">Spool #2</string>
    <string name="spool3_button">Spool #3</string>
    <string name="spool4_button">Spool #4</string>
    <string name="place_filler">0</string>
</resources>